--- a/15_Places_to_Go_in_Philadelphia/tablet/index.html
+++ b/15_Places_to_Go_in_Philadelphia/tablet/index.html
@@ -48,49 +48,49 @@ var __adobewebfontsappname__ = "muse";
      <div class="popup_anchor" id="u1568popup">
       <div class="SlideShowContentPanel clearfix" id="u1568"><!-- stack box -->
        <div class="SSSlide clip_frame grpelem" id="u1587"><!-- image -->
-        <img class="ImageInclude" id="u1587_img" data-src="../images/italianmarket_ollyliu.jpg" src="../images/blank.gif" alt="" data-width="772" data-height="463"/>
+        <img class="ImageInclude" id="u1587_img" data-src="https://s3.amazonaws.com/media.dpn/45205_italianmarket_ollyliuf.jpg" src="../images/blank.gif" alt="" data-width="772" data-height="463"/>
        </div>
        <div class="SSSlide invi clip_frame grpelem" id="u1597"><!-- image -->
-        <img class="ImageInclude" id="u1597_img" data-src="../images/longwoodgardens_amandasuarez.jpg" src="../images/blank.gif" alt="" data-width="772" data-height="463"/>
+        <img class="ImageInclude" id="u1597_img" data-src="https://s3.amazonaws.com/media.dpn/45207_longwoodgardens_amandasuarezf.jpg" src="../images/blank.gif" alt="" data-width="772" data-height="463"/>
        </div>
        <div class="SSSlide invi clip_frame grpelem" id="u1589"><!-- image -->
-        <img class="ImageInclude" id="u1589_img" data-src="../images/electricfactory_marcuskatz.jpg" src="../images/blank.gif" alt="" data-width="772" data-height="463"/>
+        <img class="ImageInclude" id="u1589_img" data-src="https://s3.amazonaws.com/media.dpn/45201_electricfactory_marcuskatzf.jpg" src="../images/blank.gif" alt="" data-width="772" data-height="463"/>
        </div>
        <div class="SSSlide invi clip_frame grpelem" id="u1581"><!-- image -->
-        <img class="ImageInclude" id="u1581_img" data-src="../images/wissahickon%20valley%20park%20-%20chris%20kao.jpg" src="../images/blank.gif" alt="" data-width="768" data-height="512"/>
+        <img class="ImageInclude" id="u1581_img" data-src="https://s3.amazonaws.com/media.dpn/45212_wissahickon_valley_park_chris_kaof.jpg" src="../images/blank.gif" alt="" data-width="768" data-height="512"/>
        </div>
        <div class="SSSlide invi clip_frame grpelem" id="u1591"><!-- image -->
-        <img class="ImageInclude" id="u1591_img" data-src="../images/avenueofthearts_gregoryboyek.jpg" src="../images/blank.gif" alt="" data-width="768" data-height="512"/>
+        <img class="ImageInclude" id="u1591_img" data-src="https://s3.amazonaws.com/media.dpn/45198_avenueofthearts_gregoryboyekf.jpg" src="../images/blank.gif" alt="" data-width="768" data-height="512"/>
        </div>
        <div class="SSSlide invi clip_frame grpelem" id="u1577"><!-- image -->
-        <img class="ImageInclude" id="u1577_img" data-src="../images/racestpier_aliceren.jpg" src="../images/blank.gif" alt="" data-width="772" data-height="463"/>
+        <img class="ImageInclude" id="u1577_img" data-src="https://s3.amazonaws.com/media.dpn/45208_racestpier_alicerenf.jpg" src="../images/blank.gif" alt="" data-width="772" data-height="463"/>
        </div>
        <div class="SSSlide invi clip_frame grpelem" id="u1575"><!-- image -->
-        <img class="ImageInclude" id="u1575_img" data-src="../images/govertical_emmahartley.jpg" src="../images/blank.gif" alt="" data-width="772" data-height="463"/>
+        <img class="ImageInclude" id="u1575_img" data-src="https://s3.amazonaws.com/media.dpn/45204_govertical_emmahartleyf.jpg" src="../images/blank.gif" alt="" data-width="772" data-height="463"/>
        </div>
        <div class="SSSlide invi clip_frame grpelem" id="u1583"><!-- image -->
-        <img class="ImageInclude" id="u1583_img" data-src="../images/standrewschapel_amandasuarez.jpg" src="../images/blank.gif" alt="" data-width="772" data-height="463"/>
+        <img class="ImageInclude" id="u1583_img" data-src="https://s3.amazonaws.com/media.dpn/45211_standrewschapel_amandasuarezf.jpg" src="../images/blank.gif" alt="" data-width="772" data-height="463"/>
        </div>
        <div class="SSSlide invi clip_frame grpelem" id="u1595"><!-- image -->
-        <img class="ImageInclude" id="u1595_img" data-src="../images/magicgardens_ollyliu.jpg" src="../images/blank.gif" alt="" data-width="772" data-height="463"/>
+        <img class="ImageInclude" id="u1595_img" data-src="https://s3.amazonaws.com/media.dpn/45206_magicgardens_ollyliuf.jpg" src="../images/blank.gif" alt="" data-width="772" data-height="463"/>
        </div>
        <div class="SSSlide invi clip_frame grpelem" id="u1569"><!-- image -->
-        <img class="ImageInclude" id="u1569_img" data-src="../images/usedis_schuykill_teresaxu_1.jpg" src="../images/blank.gif" alt="" data-width="772" data-height="463"/>
+        <img class="ImageInclude" id="u1569_img" data-src="https://s3.amazonaws.com/media.dpn/45210_usedis_schuykill_teresaxu_1f.jpg" src="../images/blank.gif" alt="" data-width="772" data-height="463"/>
        </div>
        <div class="SSSlide invi clip_frame grpelem" id="u1573"><!-- image -->
-        <img class="ImageInclude" id="u1573_img" data-src="../images/baltimoreave_ajonbrodie.jpg" src="../images/blank.gif" alt="" data-width="772" data-height="463"/>
+        <img class="ImageInclude" id="u1573_img" data-src="https://s3.amazonaws.com/media.dpn/45199_baltimoreave_ajonbrodief.jpg" src="../images/blank.gif" alt="" data-width="772" data-height="463"/>
        </div>
        <div class="SSSlide invi clip_frame grpelem" id="u1571"><!-- image -->
-        <img class="ImageInclude" id="u1571_img" data-src="../images/readingviaduct_katiezhao.jpg" src="../images/blank.gif" alt="" data-width="772" data-height="463"/>
+        <img class="ImageInclude" id="u1571_img" data-src="https://s3.amazonaws.com/media.dpn/45209_readingviaduct_katiezhaof.jpg" src="../images/blank.gif" alt="" data-width="772" data-height="463"/>
        </div>
        <div class="SSSlide invi clip_frame grpelem" id="u1585"><!-- image -->
-        <img class="ImageInclude" id="u1585_img" data-src="../images/elfrethsalley_aliceren.jpg" src="../images/blank.gif" alt="" data-width="772" data-height="463"/>
+        <img class="ImageInclude" id="u1585_img" data-src="https://s3.amazonaws.com/media.dpn/45202_elfrethsalley_alicerenf.jpg" src="../images/blank.gif" alt="" data-width="772" data-height="463"/>
        </div>
        <div class="SSSlide invi clip_frame grpelem" id="u1593"><!-- image -->
-        <img class="ImageInclude" id="u1593_img" data-src="../images/franklinfountain_sarahbaraksomartin.jpg" src="../images/blank.gif" alt="" data-width="772" data-height="463"/>
+        <img class="ImageInclude" id="u1593_img" data-src="https://s3.amazonaws.com/media.dpn/45203_franklinfountain_sarahbaraksomartinf.jpg" src="../images/blank.gif" alt="" data-width="772" data-height="463"/>
        </div>
        <div class="SSSlide invi clip_frame grpelem" id="u1579"><!-- image -->
-        <img class="ImageInclude" id="u1579_img" data-src="../images/broadst_gregoryboyek.jpg" src="../images/blank.gif" alt="" data-width="768" data-height="512"/>
+        <img class="ImageInclude" id="u1579_img" data-src="https://s3.amazonaws.com/media.dpn/45200_broadst_gregoryboyekf.jpg" src="../images/blank.gif" alt="" data-width="768" data-height="512"/>
        </div>
       </div>
      </div>
@@ -211,7 +211,8 @@ var __adobewebfontsappname__ = "muse";
    $(document).ready(function() { try {
 (function(){var a={},b=function(a){if(a.match(/^rgb/))return a=a.replace(/\s+/g,"").match(/([\d\,]+)/gi)[0].split(","),(parseInt(a[0])<<16)+(parseInt(a[1])<<8)+parseInt(a[2]);if(a.match(/^\#/))return parseInt(a.substr(1),16);return 0};(function(){$('link[type="text/css"]').each(function(){var b=($(this).attr("href")||"").match(/\/?css\/([\w\-]+\.css)\?(\d+)/);b&&b[1]&&b[2]&&(a[b[1]]=b[2])})})();(function(){$("body").append('<div class="version" style="display:none; width:1px; height:1px;"></div>');
 for(var c=$(".version"),d=0;d<Muse.assets.required.length;){var f=Muse.assets.required[d],g=f.match(/([\w\-\.]+)\.(\w+)$/),k=g&&g[1]?g[1]:null,g=g&&g[2]?g[2]:null;switch(g.toLowerCase()){case "css":k=k.replace(/\W/gi,"_").replace(/^([^a-z])/gi,"_$1");c.addClass(k);var g=b(c.css("color")),h=b(c.css("background-color"));g!=0||h!=0?(Muse.assets.required.splice(d,1),"undefined"!=typeof a[f]&&(g!=a[f]>>>24||h!=(a[f]&16777215))&&Muse.assets.outOfDate.push(f)):d++;c.removeClass(k);break;case "js":k.match(/^jquery-[\d\.]+/gi)&&
-typeof $!="undefined"?Muse.assets.required.splice(d,1):d++;break;default:throw Error("Unsupported file type: "+g);}}c.remove();if(Muse.assets.outOfDate.length||Muse.assets.required.length)c="Some files on the server may be missing or incorrect. Clear browser cache and try again. If the problem persists please contact website author.",(d=location&&location.search&&location.search.match&&location.search.match(/muse_debug/gi))&&Muse.assets.outOfDate.length&&(c+="\nOut of date: "+Muse.assets.outOfDate.join(",")),d&&Muse.assets.required.length&&(c+="\nMissing: "+Muse.assets.required.join(",")),alert(c)})()})();/* body */
+typeof $!="undefined"?Muse.assets.required.splice(d,1):d++;break;default:throw Error("Unsupported file type: "+g);}}c.remove();if(Muse.assets.outOfDate.length||Muse.assets.required.length)c="Some files on the server may be missing or incorrect. Clear browser cache and try again. If the problem persists please contact website author.",(d=location&&location.search&&location.search.match&&location.search.match(/muse_debug/gi))&&Muse.assets.outOfDate.length&&(c+="\nOut of date: "+Muse.assets.outOfDate.join(",")),d&&Muse.assets.required.length&&(c+="\nMissing: "+Muse.assets.required.join(",")),alert(c)})()})();
+/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.resizeHeight()/* resize height */
