--- a/15_Places_to_Go_in_Philadelphia/index.html
+++ b/15_Places_to_Go_in_Philadelphia/index.html
@@ -323,7 +323,13 @@ content="https://s3.amazonaws.com/media.dpn/45200_broadst_gregoryboyekf.jpg" />
     </div>
     <div class="verticalspacer"></div>
     <div class="browser_width colelem" id="u806-bw">
-     <div id="u806"><!-- simple frame --></div>
+     <div id="u806"><!-- group -->
+      <div class="clearfix" id="u806_align_to_page">
+       <div class="clearfix grpelem" id="u1656-4"><!-- content -->
+        <p id="u709-2">PAGE BY ANALYN DELOS SANTOS</p>
+       </div>
+      </div>
+     </div>
     </div>
    </div>
   </div>
