--- a/pennbracket/index.html
+++ b/pennbracket/index.html
@@ -69,7 +69,7 @@
 		<div class="poll-area">
 			<table cellspacing="15">
 				<thead>
-					<th colspan='16' style="font-family:Roboto;color:white;font-size:30px;border:none">Vote For Your Team And Like Us On Facebook! <br> See group descriptions <a href="http://projects.thedp.com/bracketgroups.html" style="color:white">here</a></th>
+					<th colspan='16' style="font-family:Roboto;color:white;font-size:30px;border:none">Vote For Your Team And Like Us On Facebook! <br> See group descriptions <a href="http://projects.thedp.com/pennbracket/bracketgroups.html" style="color:white">here</a></th>
 				</thead>
 				<tbody id="poll_body">
 					<tr id="space"><td><td><td><td><td><td><td><td><td><td><td><td><td><td><td><td></tr>
