--- a/pennbracket/bracketgroups.html
+++ b/pennbracket/bracketgroups.html
@@ -13,7 +13,7 @@
   <ul id="topmenu">
 <li  class="active"><a href="http://www.thedp.com">Go to thedp.com</a>
 </li>
-<li class="active"><a href="http://projects.thedp.com/pennbracket">Go to Bracket</a>
+<li class="active"><a href="temp">Go to Bracket</a>
 </li>
 </ul>
 </div>
