Bracket v0.6 - Changed dimensions of bracket
Bracket v0.6 - Changed dimensions of bracket

--- a/pennbracket/index.html
+++ b/pennbracket/index.html
@@ -51,7 +51,7 @@
 		</header>
 		<div class="background">
 			<div id="frame">
-				<iframe src="http://challonge.com/pennBracket/module" width="99.5%" height="900" frameborder="0" scrolling="no" allowtransparency="true"></iframe>
+				<iframe src="http://challonge.com/pennBracket/module?multiplier=.92&match_width_multiplier=1.45" width="99.5%" height="940" frameborder="0" scrolling="no" allowtransparency="true"></iframe>
 			</div>
 			<br><br>
 			
