Bracket v0.90 - Minor edits to group names, added SAC
Minor edits to group names, added SAC

--- a/pennbracket/bracketgroups.html
+++ b/pennbracket/bracketgroups.html
@@ -47,6 +47,7 @@
 	<a href="#21">Penn Taiwanese Society</a><br>
 	<a href="#22">PennYo</a><br>
 	<a href="#23">The Punch Bowl</a><br>
+	<a href="#30">Student Activities Council</a><br>
 	<a href="#24">Shabbatones</a><br>
 	<a href="#25">Strictly Funk</a><br>
 	<a href="#26">Undergraduate Assembly</a><br>
@@ -237,6 +238,12 @@ everything from the DP and the Vietnam war, to Wharton and your
 mom. We hope you like the magazine and our website, and that you’ll
 laugh, cry, or be enlightened. Okay, maybe just laugh or cry.
 </p>
+<h2 id="30">Student Activities Council</h2>
+<br>
+<img src="https://fbcdn-sphotos-g-a.akamaihd.net/hphotos-ak-xap1/v/t1.0-9/10636169_688154217939339_4655120470494068512_n.jpg?oh=3cd036700a264d97d1306d0f0bf1618f&oe=55753A01&__gda__=1434996701_cd404d64074477f4fcc5f3754ee941e8" width="480">
+<p>
+The big SAC (or Student Activities Council, to the uninitiated) is the team you want to put your money on, because we've probably given any group you've been in money to fund your events (but not your BYOs!). We have the power of the purse behind us, which on this campus can mean a pretty pricey Louis Vuitton bag, so there's no stopping us. Voting for us is like the end of the former moratorium - it's better for everyone.
+</p>
 
 <h2 id="24">Shabbatones</h2>
 <br>
@@ -259,7 +266,7 @@ As one of Penn's well established dance companies, we have been fusing delicate 
 As the only elected branch of Penn Student Government that represents the *entire* student body, the UA is ready to bring it for March Madness. Think we're just the airport shuttles club? Well, think again. This past year we've spent hundreds of hours working on over 90 projects that touch on student life, academic affairs, social justice and dining, sustainability and facilities to better your experience at Penn. You can thank us for allocating over $2.1 million that goes towards Fling, MERT and student group funding (yep, yours too). You know what you need to do - Vote for the UA!  
 </p>
 
-<h2 id="27">United Minorities CouncilC</h2><br>
+<h2 id="27">United Minorities Council</h2><br>
 <img src="http://dpwebadmin.github.io/Photos/UMC%20Photo.jpg" width="480">
 <p>
 The United Minorities Council has been the voice for minority groups on Penn's campus for over 30 years. We're all about promoting interculturalism and social justice here at Penn. Our goal is to unify student groups while showcasing diversity through events like the Celebration of Cultures and Unity Month. We would not be here today without the advocacy of minority students, which is why we continue to advocate for you. 
@@ -276,10 +283,7 @@ If you're reading this it's too late. Why? Because all UMOJA does is win, win, w
 <h2 id="29">Wharton Women</h2>
 <br>
 <img src="http://dpwebadmin.github.io/Photos/WW%20Photo.jpg" width="480">
-<p>
-
-"Who run the world? Girls. Beyonce said it best herself. So follow Queen Bey's advice and vote for the club that empowers women in business, Wharton Women! With past Wharton Women speakers such Bethenny Frankel, Forrest Gump film producer Wendy Finerman, and the CMO of McDonald's, Deborah Wahl, there is no better team in the game.  Get ready, because we not only Dress for Success and Stride in Higher in Heels, We Win."
-</p>
+<p>Who run the world? Girls. Beyonce said it best herself. So follow Queen Bey's advice and vote for the club that empowers women in business, Wharton Women! With past Wharton Women speakers such Bethenny Frankel, Forrest Gump film producer Wendy Finerman, and the CMO of McDonald's, Deborah Wahl, there is no better team in the game.  Get ready, because we not only Dress for Success and Stride in Higher in Heels, We Win.</p>
 
 </div>
 <div id="sidebar">
