Closed iframe tag

--- a/pennbracket/index.html
+++ b/pennbracket/index.html
@@ -67,7 +67,7 @@
 			</table>
 		</div>
 		<div class="poll-area">
-			<iframe src="https://docs.google.com/forms/d/1JpZAmZVKcvKS98uzAdisCy5p2sfLtsvCyKFB08oqBhc/viewform?embedded=true#start=embed" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">
+			<iframe src="https://docs.google.com/forms/d/1JpZAmZVKcvKS98uzAdisCy5p2sfLtsvCyKFB08oqBhc/viewform?embedded=true#start=embed" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0"></iframe>
 		</div>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		<script>
