--- a/Spring Fling/Spring Fling.html
+++ b/Spring Fling/Spring Fling.html
@@ -31,7 +31,7 @@
 	<!-- copy these lines to your document: -->
 
 	<div id="springfling_hype_container" style="position:relative;overflow:hidden;width:700px;height:5850px;">
-		<script type="text/javascript" charset="utf-8" src="Spring%20Fling.hyperesources/springfling_hype_generated_script.js?43617"></script>
+		<script type="text/javascript" charset="utf-8" src="http://projects/Spring Fling/Spring Fling.hyperesources/springfling_hype_generated_script.js?43617"></script>
 	</div>
 
 	<!-- end copy -->
