--- a/springfling2015/springfling2015.html
+++ b/springfling2015/springfling2015.html
@@ -31,7 +31,7 @@
 	<!-- copy these lines to your document: -->
 
 	<div id="springfling2015_hype_container" style="position:relative;overflow:hidden;width:700px;height:5850px;">
-		<script type="text/javascript" charset="utf-8" src="http://projects/springfling2015/springfling2015.hyperesources/springfling2015_hype_generated_script.js?34748"></script>
+		<script type="text/javascript" charset="utf-8" src="http://projects.thedp.com/springfling2015/springfling2015.hyperesources/springfling2015_hype_generated_script.js?34748"></script>
 	</div>
 
 	<!-- end copy -->
