added to projects folder

--- a/denzelcummings/index.html
+++ b/denzelcummings/index.html
@@ -62,7 +62,7 @@ content="https://s3.amazonaws.com/media.dpn/46107_facebook_denzelo.jpg" />
      </div>
     </div>
     <div class="pinned-colelem" id="u253"><!-- animation -->
-     <iframe id="U779_animation" src="assets/pennten_navbar/pennten_navbar.html" scrolling="no"></iframe>
+     <iframe id="U779_animation" src="http://projects.thedp.com/pennten_navbar/pennten_navbar.html" scrolling="no"></iframe>
     </div>
     <img class="colelem" id="u622-6" alt="DENZEL
 CUMMINGS" width="583" height="225" src="images/u622-6.png" data-hidpi-src="images/u622-6_2x.png"/><!-- rasterized frame -->
