--- a/denzelcummings/index.html
+++ b/denzelcummings/index.html
@@ -46,7 +46,7 @@ content="https://s3.amazonaws.com/media.dpn/46107_facebook_denzelo.jpg" />
         <img class="ImageInclude" id="u697_img" data-src="images/denzel_cummings-10.jpg" src="images/blank.gif" alt="" data-width="1241" data-height="827"/>
        </div>
        <div class="SSSlide invi clip_frame grpelem" id="u688"><!-- image -->
-        <img class="ImageInclude" id="u688_img" data-src="images/denzel_cummings-4.jpg" src="images/blank.gif" alt="" data-width="1241" data-height="827"/>
+        <img class="ImageInclude" id="u688_img" data-src="http://cdn.breitbart.com/mediaserver/Breitbart/Big-Government/2014/Barack-and-Michelle/obama-air-horn-ap.jpg" src="images/blank.gif" alt="" data-width="1241" data-height="827"/>
        </div>
       </div>
      </div>
