url image test 2

--- a/denzelcummings/index.html
+++ b/denzelcummings/index.html
@@ -43,7 +43,7 @@ content="https://s3.amazonaws.com/media.dpn/46107_facebook_denzelo.jpg" />
      <div class="popup_anchor" id="u615popup">
       <div class="SlideShowContentPanel clearfix" id="u615"><!-- stack box -->
        <div class="SSSlide clip_frame grpelem" id="u697"><!-- image -->
-        <img class="ImageInclude" id="u697_img" data-src="images/denzel_cummings-10.jpg" src="images/blank.gif" alt="" data-width="1241" data-height="827"/>
+        <img class="ImageInclude" id="u697_img" data-src="https://s3.amazonaws.com/media.dpn/46107_facebook_denzelo.jpg" src="https://s3.amazonaws.com/media.dpn/46107_facebook_denzelo.jpg" alt="" data-width="1241" data-height="827"/>
        </div>
        <div class="SSSlide invi clip_frame grpelem" id="u688"><!-- image -->
         <img class="ImageInclude" id="u688_img" data-src="http://cdn.breitbart.com/mediaserver/Breitbart/Big-Government/2014/Barack-and-Michelle/obama-air-horn-ap.jpg" src="images/blank.gif" alt="" data-width="1241" data-height="827"/>
