--- a/denzelcummings/index.html
+++ b/denzelcummings/index.html
@@ -84,7 +84,7 @@ BY NATASHA DOHERTY " width="658" height="276" src="images/u638-9.png" data-hidpi
      </div>
     </div>
     <div class="clearfix colelem" id="u632"><!-- group -->
-     <img class="svg grpelem" id="u633" src="images/pasted%20svg%201011x101.svg" width="101" height="101" alt="" data-mu-svgfallback="images/pasted%20svg%201011x101_poster_.png"/><!-- svg -->
+     <img class="svg grpelem" id="u633" src="http://projects.thedp.com/join/images/3211746424_22232f771e_o%20(2).jpg" width="101" height="101" alt="" data-mu-svgfallback="images/pasted%20svg%201011x101_poster_.png"/><!-- svg -->
      <div class="clearfix ose_pre_init grpelem" id="u635-6"><!-- content -->
       <h2>FROM</h2>
       <h2>CANADA TO COMPROMISE</h2>
