--- a/best-of-penn/index.html
+++ b/best-of-penn/index.html
@@ -8,6 +8,15 @@
 		<link href='http://fonts.googleapis.com/css?family=Roboto:300,900' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
+		<script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-707447-4', 'auto');
+    ga('send', 'pageview'); 
+    </script>
+
 		<header>
 			<!-- I don't like the arbitrary picture height, but it seems to be a necessary evil -->
 			<img src="https://s3.amazonaws.com/media.dpn/46233_boplogo2015f.jpg" height="550" style="margin:auto;display:block">
