--- a/pennten/index.html
+++ b/pennten/index.html
@@ -128,7 +128,7 @@ content="https://s3.amazonaws.com/media.dpn/46154_groupphotoo.jpg" />
 					    	<h5>School: College of Arts & Sciences</h5>
 					    	<h5>Major(s): Philosophy, Politics and Economics</h5>
 					    	<p>"The Black Ivy Coalition is a coalition I co-founded dedicated to social change is comprised of black student leaders from all eight Ivy League institutions. We decided that our plan of action would be to create a network of black student leaders to organize joint protests"</p>
-					    	<div id="read-link">READ MORE THIS WEDNESDAY</div>
+					    	<a href"http://dpwebadmin.github.io/denzelcummings/"><div id="read-link">READ MORE</div></a>
 
 					  	</div>
 					</div>
