remove extra chars

--- a/best-of-penn/index.html
+++ b/best-of-penn/index.html
@@ -156,7 +156,7 @@
 									</thead>
 									<tr>
 										<td class="best-blurb" width="75%">
-											<p>You dond't go to  Itzaccihuatl for their guac, quesadillas, or burritos. You go for the next dayd's hazy memories of having way too much tequila and taking shots with owner/manager/does anyone know (?) Jon.
+											<p>You don't go to  Itzaccihuatl for their guac, quesadillas, or burritos. You go for the next day's hazy memories of having way too much tequila and taking shots with owner/manager/does anyone know (?) Jon.
 											</p>
 										</td>
 									</tr>
