add missing words

--- a/best-of-penn/index.html
+++ b/best-of-penn/index.html
@@ -570,7 +570,7 @@
 												<li>Go to LinkedIn.com</li>
 												<li>Advanced search: The Wharton School</li>
 												<li>Select Industry: Finance</li>
-												<li>Company: Goldman Sachs, JP Morgan, McKinsey (whichever</li>
+												<li>Company: Goldman Sachs, JP Morgan, McKinsey (whichever firm fits your fancy)</li>
 												<li>Optional: Fortune level (50 = old ass dudes, if you're tryna get it now. 1000 = young dudes who you can debatably fuck without Viagra).</li>
 											</ol>
 											<br>
