--- a/pennten/index.html
+++ b/pennten/index.html
@@ -168,7 +168,7 @@ content="https://s3.amazonaws.com/media.dpn/46154_groupphotoo.jpg" />
 					    	<h5>School: College of Arts & Sciences</h5>
 					    	<h5>Major(s): Political Science</h5>
 					    	<p>"My biggest commitment is to help to achieve the UN's Millennium Development Goals. The Millennium Development Goals project is considered to be the most important international document ever created in the history of the United Nations. It encompasses a collective and global promise to the most vulnerable people to eradicate extreme poverty, promote gender equality and education, as well as, create environmental sustainability."</p>
-					    	<a href="dpwebadmin.github.io/sayidabdullaev/index.html"><div id="read-link">READ MORE</div></a>	 			
+					    	<a href="http://dpwebadmin.github.io/sayidabdullaev/index.html"><div id="read-link">READ MORE</div></a>	 			
 					  	</div>
 					</div>
 				</td>
