--- a/pennten/index.html
+++ b/pennten/index.html
@@ -115,7 +115,7 @@ content="https://s3.amazonaws.com/media.dpn/46154_groupphotoo.jpg" />
 					    	<h5>School: College of Arts & Sciences</h5>
 					    	<h5>Possible Major(s): Biology, Social Impact and Responsibility</h5>
 					    	<p>"For almost a decade, I have served as the Executive Director of Kids Change the World, Incorporated, the organization that I founded in fifth grade. Throughout my tenure as Executive Director, I could not be more satisfied by the sheer number of people the program has brought together - from all walks of life around the world - all in the service of children."</p>
-					    	<div id="read-link">READ MORE THIS THURSDAY</div>
+					    	<a href="http://thedp.com/pennten/christopheryao><div id="read-link">READ MORE</div></a>
 
 					  	</div>
 					</div>
@@ -143,7 +143,7 @@ content="https://s3.amazonaws.com/media.dpn/46154_groupphotoo.jpg" />
 					    	<h5>School: Wharton</h5>
 					    	<h5>Major(s): OPIM</h5>
 					    	<p>"It's not just about sunglasses. It's not a world-changing entity but does donate some of the profits ... Glass-U is targeting millennials. What is one of the products that everyone wears? Sunglasses. If you put in front of them a product that they actually desire, they will donate more."</p>
-					    	<div id="read-link">READ MORE THIS THURSDAY</div>
+					    	<a href="http://thedp.com/pennten/danielfine><div id="read-link">READ MORE</div></a>
 
 					  	</div>
 					</div>
@@ -156,7 +156,7 @@ content="https://s3.amazonaws.com/media.dpn/46154_groupphotoo.jpg" />
 					    	<h5>School: Wharton</h5>
 					    	<h5>Major(s): Finance/Real Estate</h5>
 					    	<p>"When I was fourteen, I founded a nonprofit organization called Threads for Teens. It is a clothing boutique for girls who are in foster care and group homes. I currently have a location in California, and am working to open a location in Philadelphia. I started this organization in January 2010 when I was a freshman in high school. I strongly believe in the importance of girl empowerment and see Threads for Teens building confidence in teen girls through the gift of clothing."</p>
-					    	<div id="read-link">READ MORE THIS THURSDAY</div>
+					    	<a href="http://thedp.com/pennten/ahlstromallyson"><div id="read-link">READ MORE</div></a>
 					  	</div>
 					</div>
 				</td>
