Update index - Chris and Dan's URL

--- a/pennten/index.html
+++ b/pennten/index.html
@@ -115,7 +115,7 @@ content="https://s3.amazonaws.com/media.dpn/46154_groupphotoo.jpg" />
 					    	<h5>School: College of Arts & Sciences</h5>
 					    	<h5>Possible Major(s): Biology, Social Impact and Responsibility</h5>
 					    	<p>"For almost a decade, I have served as the Executive Director of Kids Change the World, Incorporated, the organization that I founded in fifth grade. Throughout my tenure as Executive Director, I could not be more satisfied by the sheer number of people the program has brought together - from all walks of life around the world - all in the service of children."</p>
-					    	<a href="http://thedp.com/pennten/christopheryao><div id="read-link">READ MORE</div></a>
+					    	<a href="http://thedp.com/pennten/christopheryao"><div id="read-link">READ MORE</div></a>
 
 					  	</div>
 					</div>
@@ -143,7 +143,7 @@ content="https://s3.amazonaws.com/media.dpn/46154_groupphotoo.jpg" />
 					    	<h5>School: Wharton</h5>
 					    	<h5>Major(s): OPIM</h5>
 					    	<p>"It's not just about sunglasses. It's not a world-changing entity but does donate some of the profits ... Glass-U is targeting millennials. What is one of the products that everyone wears? Sunglasses. If you put in front of them a product that they actually desire, they will donate more."</p>
-					    	<a href="http://thedp.com/pennten/danielfine><div id="read-link">READ MORE</div></a>
+					    	<a href="http://thedp.com/pennten/danielfine"><div id="read-link">READ MORE</div></a>
 
 					  	</div>
 					</div>
