--- a/heyday100/HeyDay100.html
+++ b/heyday100/HeyDay100.html
@@ -33,7 +33,7 @@
 	<!-- copy these lines to your document: -->
 
 	<div id="heyday100_hype_container" style="margin:auto;position:relative;width:1440px;height:18750px;overflow:hidden;" aria-live="polite">
-		<script type="text/javascript" charset="utf-8" src="http://projects/heyday100/HeyDay100.hyperesources/heyday100_hype_generated_script.js?85554"></script>
+		<script type="text/javascript" charset="utf-8" src="HeyDay100.hyperesources/heyday100_hype_generated_script.js"></script>
 	</div>
 
 	<!-- end copy -->
