--- a/advertising/index.html
+++ b/advertising/index.html
@@ -55,7 +55,7 @@
                     <p>
                         In an era when we often hear about the struggles of mass-market commercial newspapers and about students only getting their information online, The Daily Pennsylvanian thrives as a community newspaper because we remain relevant to our audience of devoted
                         readers. And for our advertisers, that’s why we are a proven and eff ective way — and still the best way — to reach Penn. We off er multiple media in print, online and out-of-home that reach diff erent segments of the Penn
-                        market, from students to faculty/staff to parents and alumni, allowing you to choose the medium or media mix that best suits your advertising needs.
+                        market, from students to faculty and staff to parents and alumni, allowing you to choose the medium or media mix that best suits your advertising needs.
                     </p>
 
                     <h3>The Penn Market</h3>
