--- a/mold123/index.html
+++ b/mold123/index.html
@@ -14,7 +14,7 @@
   <h1> From demolition to collaboration </h1>
   <div id="byLine">
     Sixty years ago, Penn&#39s approach to development was all about self-interest. Now, working with the
-    neighborhood is essential to the University&#39s construction strategy.<br>
+    neighborhood is essential to the University&#39s construction stratsdfasdegy.<br>
     <br>
     <div style="color: #424242"> By Sophia Witte</div> 
   </div>
