--- a/mold123/index.html
+++ b/mold123/index.html
@@ -36,32 +36,26 @@
     <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
     <meta charset="utf-8">
 
-    <title>TestThe Dividing Line</title>
+    <title>The Dividing Line</title>
     <meta content="" name="description">
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <link href="http://d1q35ni5859stt.cloudfront.net/20151103Q1xMLLXjhg/dist/img/favicon.ico" rel="shortcut icon">
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="css/style.css" rel="stylesheet" type="text/css">
-=======
 
-<link rel="stylesheet" type="text/css" href="style2.css">
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="style2.css">
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
 
-<div class="header">
-  <!-- CONTAINS BACKGROUND IMAGE -->
-</div>
+	<div class="header">
+	  <!-- CONTAINS BACKGROUND IMAGE -->
+	</div>
 
-<div class ="content">
-  <h1> From demolition to collaboration </h1>
-  <div id="byLine">
-    Sixty years ago, Penn&#39s approach to development was all about self-interest. Now, working with the
-    neighborhood is essential to the University&#39s construction stratsdfasdegy.<br>
-    <br>
-    <div style="color: #424242"> By Sophia Witte</div> 
-  </div>
-
-  <script>
+	<div class ="content">
+	  
+	
+	<!-- the fading effect 
+	<script>
 
       //Every resize of window
       // $(window).resize(sizeContent);
@@ -75,14 +69,14 @@
 
       $(window).scroll(function(){
           $(".header").css("opacity", 1 - $(window).scrollTop() / 500);
-      });
+      }); 
   </script>
+  !-->
 
->>>>>>> 4225a84744fdab16568a3878def673f64f650aea
 </head>
 
 <body style= "background: #ffffff; background-size: cover; background-repeat: no-repeat;">
-	<script>
+	<<script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -109,6 +103,12 @@
             </video>
     </div>
 
+	<div class="container" style="padding-left: 10%; padding-right: 10%; padding-top: 30px;">
+		<p>
+		Mold Abstract. By Dan Spinelli
+		</p>
+	</div>
+  
     <div class="container" style="padding-left: 10%; padding-right: 10%; padding-top: 30px;">
 
 				
