edit to make update

--- a/mold123/index.html
+++ b/mold123/index.html
@@ -119,7 +119,7 @@
 			
 		<p>
 			<strong>[BIG PHOTO: Picture Pat Goodridge took of cell phone with mushroom on
-		it.]
+		it. test]
 			</strong>
 		</p>
 		<!-- this is the drop cap -->
